2006-03-26  Johan Dahlin  <jdahlin@async.com.br>
	
	* kiwi/desktopparser.py: Add a GKeyFile inspired .desktop parser

2006-03-24  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/comboentry.py:
	* kiwi/ui/entry.py:
	* kiwi/ui/widgets/combo.py:
	* kiwi/ui/widgets/entry.py:
	In ProxyComboEntry, only listen to content-changed on the ProxyEntry.
	In ProxyEntry, work around GtkEntry::changed which sometimes is emitted
	twice when set_text is called.
	In KiwiEntry.get_selected_by_iter, return None if the text from the 
	model doesn't match the text

2006-03-23  Johan Dahlin  <jdahlin@async.com.br>

	* gazpacho-plugin/kiwiwidgets.xml:
	* kiwi/ui/gazpacholoader.py:
	* kiwi/ui/widgets/checkbutton.py:
	* kiwi/ui/widgets/entry.py:
	* kiwi/ui/widgets/filechooser.py: 
	* kiwi/ui/widgets/label.py:
	* kiwi/ui/widgets/radiobutton.py:
	* kiwi/ui/widgets/spinbutton.py:
	* kiwi/ui/widgets/textview.py:
	* tests/test_CheckButton.py:
	* tests/test_Label.py:
	* tests/test_SpinButton.py:
	* tests/test_utils.py:
	Rename all widgets to Proxy..., update gazpacho and tests.

2006-03-23  Ronaldo Maia,,,  <romaia@async.com.br>

	reviewed by: jdahlin: 

	* kiwi/ui/proxy.py: allow None to be passed to proxy.set_model
	* kiwi/ui/widgets/checkbutton.py:
	* kiwi/ui/widgets/radiobutton.py:
	Allow None to be passed to update

2006-03-23  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/datatypes.py: Move setlocale() call to __init__.py

	* kiwi/environ.py (Library.enable_translation): Refactor a little bit
	try to locate the .mo file and give a warning if it cannot
	be found.

2006-03-22  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/dist.py (KiwiInstallLib._write_dictionary): Replace / with 
	os.sep on win32, fixes installation.

	* kiwi/ui/entry.py:
	* kiwi/ui/widgets/entry.py:
	* tests/test_Entry.py:
	Move stuff from ProxyEntry to KiwiEntry, use
	a kiwi entry in the ComboEntry.

2006-03-22  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/proxy.py: Rename from kiwi.proxies