@@ -1,3 +1,12 @@
+2006-03-28  Ronaldo Maia  <romaia@async.com.br>
+
+	reviewed by: jdahlin
+
+	* examples/framework/diary/diary2.py: When the list is empty, pass None
+	to proxy.set_model
+	* examples/framework/news/news4.py: Fixing methods, so they work
+	properly with both callbacks and keyactions.
+
 2006-03-26  Johan Dahlin  <jdahlin@async.com.br>
 	
 	* kiwi/desktopparser.py: Add a GKeyFile inspired .desktop parser
